# jrbeverly.web

./: .gitignore  .gitpod.yml  README.md  WORKSPACE  index.html  index.xml  searchindex.json  sitemap.xml
srv/jrbeverly.me/: BUILD.bazel  README.md  index.html  keybase.txt  netlify.toml
srv/jrbeverly.me/certificates/pluralsight/: index.html
srv/jrbeverly.me/components/pluralsight/: config.toml
srv/jrbeverly.me/components/pluralsight/themes/hugo-devresume-theme/assets/scss/: devresume.scss
srv/jrbeverly.me/components/pluralsight/themes/hugo-devresume-theme/layouts/: index.html
srv/jrbeverly.me/components/pluralsight/themes/hugo-devresume-theme/layouts/partials/: contact.html  experience.html  profile.html  (+2 more)
srv/jrbeverly.me/components/repositories/: BUILD.bazel  config.yml
srv/jrbeverly.me/components/repositories/content/blockycraft/: README.md
srv/jrbeverly.me/components/repositories/content/cardboardci/: README.md
srv/jrbeverly.me/components/repositories/content/posts/: blockycraft-blockycraft-classic.md  blockycraft-readme.md  cardboardci-ci-pdf2htmlex.md  cardboardci-docker-ecr.md  cardboardci-docker-htmlhint.md  cardboardci-docker-netlify.md  cardboardci-docker-rsvg.md  cardboardci-dockerfiles.md  devkitspaces-vagrant-desktop-homelab.md  infraprints-terraform-aws-iam-ci-role.md  jrbeverly-bazel-and-aws-cdk.md  jrbeverly-cue-for-schema-gen.md  jrbeverly-lab-starter.md  jrbeverly-mirroring.md  jrbeverly-packer-bake-with-aws-native.md  xplatformer-readme.md
srv/jrbeverly.me/components/repositories/content/threethirtythree/: README.md
srv/jrbeverly.me/components/udacity/: config.toml
srv/jrbeverly.me/components/udacity/themes/hugo-devresume-theme/i18n/: en.yaml
srv/jrbeverly.me/components/udacity/themes/hugo-devresume-theme/layouts/: index.html
srv/jrbeverly.me/public/: .gitignore  index.html  netlify.toml
srv/udacity.jrbeverly.me/: BUILD.bazel
srv/udacity.jrbeverly.me/themes/hugo-devresume-theme/i18n/: en.yaml
srv/udacity.jrbeverly.me/themes/hugo-devresume-theme/layouts/partials/: profile.html
srv/workshop.jrbeverly.me/: BUILD.bazel
srv/workshop.jrbeverly.me/content/blockycraft/: README.md
srv/workshop.jrbeverly.me/content/posts/: blockycraft-vagrant-desktop-opengl.md  cardboardci-bazel-docker-awscli.md  cardboardci-ci-boilerplate.md  cardboardci-ci-optipng.md  cardboardci-docker-cppcheck.md  cardboardci-docker-dbxcli.md  cardboardci-docker-hugo.md  cardboardci-docker-rubocop.md  cardboardci-docker-stylelint.md  cardboardci-readme.md  devkitspaces-boxstarter-scripts.md  devkitspaces-packer-on-github.md  devkitspaces-vagrant-cicd.md  infraprints-readme.md  infraprints-terraform-aws-iam-external-role.md  infraprints-terraform-aws-s3-artifacts.md  infraprints-terraform-aws-terraform-remote-state.md  infraprints-website.md  jrbeverly-aws-chat-app.md  jrbeverly-aws-lambda-remote-session.md  jrbeverly-contentbundler.md  jrbeverly-exp-svg-icon-processing.md  jrbeverly-home.md  jrbeverly-homelab.md  jrbeverly-jollybot.md  jrbeverly-jrbeverly.web.md  jrbeverly-localization-net.md  jrbeverly-profile.md  jrbeverly-pwsh-from-github.md  jrbeverly-raytracer.md  jrbeverly-udacicards.md  jrbeverly-viewdocs-autodoc.md  xplatformer-docker-xwindow.md  xplatformer-xplatformer-workspace.md
srv/workshop.jrbeverly.me/content/wisevault/: README.md
srv/workshop.jrbeverly.me/themes/pure/static/css/: style.css
(+715 files in other folders)
