load("//bazel/macros:publish.bzl", "publish_files")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

publish_files(
    name = "publish",
    output = "public/jrbeverly.me",
    srcs = [":public"],
)

pkg_tar(
    name = "public",
    srcs = glob([
        "public/*", 
        "public/**/*"
    ]),
    strip_prefix = "./public"
)